chore: updated theme and use neovim

--- a/.fisher/themes/starship.toml
+++ b/.fisher/themes/starship.toml
@@ -10,7 +10,6 @@ $git_commit\
 $git_state\
 $git_status\
 $git_metrics\
-$sudo\
 $cmd_duration\
 $status\
 $package\
@@ -26,6 +25,16 @@ right_format="""$aws\
 $kubernetes\
 """
 
+# Replace the "❯"
+[character]
+success_symbol = "[λ](green)"
+error_symbol = "[λ](red)"
+
+[directory]
+truncation_length = 15
+truncation_symbol = "…/"
+truncate_to_repo = true
+
 [package]
 format = ' [$symbol$version]($style)'
 
@@ -33,14 +42,20 @@ format = ' [$symbol$version]($style)'
 disabled = false
 
 [aws]
+symbol = ' '
+style = 'yellow'
 disabled = false
-format = '[$profile]($style) '
+format = '[$symbol($profile )]($style)'
 
 [kubernetes]
+symbol = ' '
 disabled = false
 format = '[$symbol$context( \($namespace\))]($style)'
 
 [git_branch]
+style = 'fg:green'
+symbol = ' '
+format = '[on](white) [$symbol$branch ]($style)'
 ignore_branches = ['main']
 
 [git_commit]
@@ -51,19 +66,21 @@ disabled = false
 format = '([\[+$added]($added_style) )([-$deleted\]]($deleted_style) )'
 
 [git_status]
+style = 'fg:white'
+format = '([\[$all_status$ahead_behind\]]($style))'
 up_to_date = '[✓](green)'
-untracked = '🤷'
 ahead = '[⇡${count}](green)'
 behind = '[⇣${count}](red)'
-modified = '📝'
-staged = '[++\($count\)](green)'
-style = 'white'
-format = '([\[$all_status$ahead_behind\]]($style))'
 
 [nodejs]
+style = 'red'
+symbol = ' '
 format ='[$symbol($version )]($style)'
+detect_extensions = ['js', 'cjs', 'ts', 'mts', 'cts']
 
 [golang]
+style = 'blue'
+symbol = ' '
 format ='[$symbol($version )]($style)'
 
 [terraform]
@@ -77,8 +94,6 @@ symbol = ' '
 
 [shell]
 fish_indicator = '🐟'  # 󰈺 🐟 🐠
-powershell_indicator = '_'
-pwsh_indicator = '_'
 zsh_indicator = '󠀥%'
 style = 'cyan bold'
 disabled = false
